fix: broken layout. added grid template areas

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -7,8 +7,12 @@ body {
     line-height: 1.6;
     margin: 0;
     min-height: 100svh;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-areas:
+        "header"
+        "main"
+        "footer";
+    grid-template-rows: auto 1fr auto;
 }
 
 header,
@@ -23,11 +27,16 @@ main {
     padding-top: 1rem;
 }
 
-main {
-    flex: 1;
-}
-
 footer {
     margin-top: 1.5rem;
     padding-bottom: 1rem;
 }
+
+.container {
+    width: min(70ch, calc(100% - 2rem));
+    margin-inline: auto;
+}
+
+header { grid-area: header; }
+main { grid-area: main; }
+footer { grid-area: footer; }
